[gd_scene load_steps=7 format=2]

[ext_resource path="res://Space/Barney/Barney.png" type="Texture" id=1]
[ext_resource path="res://Space/Barney/MagneticField.png" type="Texture" id=3]
[ext_resource path="res://Space/Barney/Barney.gd" type="Script" id=4]
[ext_resource path="res://Space/Barney/CameraControl.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 58.8304

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30.0859, 30.0781 )

[node name="Barney" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="MagneticField" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MagneticField"]
scale = Vector2( 2.2, 2.2 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="MagneticField/CollisionShape2D"]
scale = Vector2( 0.227273, 0.227273 )
texture = ExtResource( 3 )

[node name="StickingField" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StickingField"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.300754, 0.300754 )
texture = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
smoothing_speed = 3.0
script = ExtResource( 5 )

[node name="Tween" type="Tween" parent="Camera2D"]

[connection signal="robot_sticked" from="." to="Camera2D" method="_on_Barney_robot_sticked"]
[connection signal="area_entered" from="MagneticField" to="." method="_on_MagneticField_area_entered"]
[connection signal="area_entered" from="StickingField" to="." method="_on_StickingField_area_entered"]
